# eiporion-expr

./: .gitignore  bitahub-dense.yaml  bitahub-mb-sr.yaml  bitahub-sr.yaml  bitahub.yaml  launch.sh  pyproject.toml  run_all.sh  setup.sh
analysis/: benchmark_table.py  directional_deviation.py  efficiency.py  plot_loss.py
configs/: dense.yaml  mb_sr.yaml  sr.yaml
eval/: compare_results.py  run_benchmarks.py
scripts/: apply_awq.py  apply_gptq.py  convert_to_eiporion.py  export_for_eval.py
train/: continued_pretrain.py  train_utils.py
